--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.hateoas</groupId>
+            <artifactId>spring-hateoas</artifactId>
+            <version>2.1.2</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
