--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+
+        <dependency>
+            <groupId>br.com.caelum.stella</groupId>
+            <artifactId>caelum-stella-core</artifactId>
+            <version>2.1.6</version>
+        </dependency>
     
 		<dependency>
 			<groupId>org.springframework.hateoas</groupId>
@@ -144,6 +150,11 @@
             <groupId>io.swagger.core.v3</groupId>
             <artifactId>swagger-annotations-jakarta</artifactId>
             <version>2.2.9</version>
+        </dependency>
+        <dependency>
+            <groupId>br.com.caelum.stella</groupId>
+            <artifactId>caelum-stella</artifactId>
+            <version>2.1.6</version>
         </dependency>
     </dependencies>
 
