refact/#00: criacao de variaveis de ambiente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
+#Import properties from env file
+spring.config.import=file:./env.properties
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=password
+#Database Configuration
+spring.datasource.url= ${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# API Configuration
+custom.api.url=${API_URL}
+
